fixed contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: white
   margin: 0;
   padding: 0;
 }
@@ -22,6 +22,7 @@ h6 {
 
 img {
   width: 100%;
+  filter: contrast(90%) ;
 }
 
 .main-nav ul {
